[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "alluka"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = ["DI", "injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = []
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/FasterSpeeding/Alluka"
Repository = "https://github.com/FasterSpeeding/Alluka"
Documentation = "https://alluka.cursed.solutions/"
Changelog = "https://github.com/FasterSpeeding/Alluka/blob/master/CHANGELOG.md"

[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"
extend-exclude = ["^/alluka/_vendor/.*$"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["alluka"]
omit = ["alluka/_vendor/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.flake8]
count = true
max-complexity = 20
max-function-length = 100
# Technically this is 120, but black has a policy of "1 or 2 over is fine if it is tidier", so we have to raise this.
max-line-length = 130
show_source = false
statistics = false
accept-encodings = "utf-8"
docstring-convention = "numpy"
exclude = ["alluka/_vendor/"]
ignore = [
    "A003",   # class attribute is shadowing a builtin
    "CFQ004", # Function has too many returns.
    "CFQ002", # Function has too many arguments.
    "D102",   # Missing docstring in public method.
    "D105",   # Magic methods not having a docstring.
    "D412",   # No blank lines allowed between a section header and its content
    "E402",   # Module level import not at top of file (isn't compatible with our import style).
    "IFS001", # "use a oneliner here".
    "T101",   # TO-DO comment detection (T102 is FIX-ME and T103 is XXX).
    "W503",   # line break before binary operator.
    "W504",   # line break before binary operator (again, I guess).
    "S101",   # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "E203",   # whitespace before ':'
    "E231",   # missing whitespace after ','
]
# Doc errors don't matter in the tests
per-file-ignores = ["tests/*.py: D100, D104"]

[tool.isort]
profile = "black"
force_single_line = true
skip = ["alluka/_vendor"]

[tool.pyright]
exclude = ["alluka/_vendor"]
include = ["alluka", "noxfile.py", "tests"]

pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"

reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.
reportPrivateUsage = "none"                     # Leads to funky false-positives around private module imports.

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = ["anyio"]

[tool.mypy]
# some good strict settings
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true
disable_error_code = ["return", "return-value"]

# Ignore vendored modules
exclude = ["alluka/_vendor/"]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-modules = "alluka._vendor"
