[package]
name = "alluka_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_alluka"
crate-type = ["cdylib"]

[dependencies.pyo3]
features = ["extension-module"]
version = "0.16.5"

[dependencies.pyo3-anyio]
git = "https://github.com/FasterSpeeding/pyo3-anyio"
rev = "a321390896a4f470232ad406b1e8280f6e1bd38d"

[profile.release]
codegen-units = 1
lto = true
strip = true
